<resources>
    <string name="app_name">Storageroom-App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="read">Read</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="favorite_button">Favorite</string>
    <string name="save_icon_description">Save Icon</string>
    <string name="cancel_icon_description">Cancel Icon</string>
    <string name="edit_icon_description">Edit Icon</string>
    <string name="delete_icon_description">Delete Icon</string>
    <string name="back_icon_description">Back to previous Page Icon</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Logout clicked</string>


    <!-- Authentication implementation -->
    <string name="auth_failed">Authentication failed.</string>
    <string name="login_successful">Login Successful.</string>
    <string name="reg_successful">Registration Successful.</string>
    <string name="user_not_auth">User not authenticated.</string>
    <string name="user_not_found">User not found</string>
    <string name="email_not_verified">Email not verified!</string>
    <string name="verification_email_failed">Verification email failed</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="verify_email_prompt">Verify email prompt</string>
    <string name="password_mismatch">Password mismatch.</string>

    <!-- Strings for login and register -->
    <string name="login">Login</string>
    <string name="email">Email</string>>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_reset">Forgot your password?</string>
    <string name="already_registered">You already have an account?</string>
    <string name="not_registered">Don\'t have an account?</string>
    <string name="no_internet_connection">Internet connection required!</string>

    <!-- Data handling implementation -->
    <string name="data_save_fail">Failed to save data</string>
    <string name="data_save_success">Data saved successfully</string>
    <string name="data_read_fail">Failed to read data: </string>
    <string name="data_update_fail">Failed to update data:  </string>
    <string name="data_update_success">Data updated successfully </string>
    <string name="data_delete_fail">Failed to delete data: </string>
    <string name="data_delete_success">Data deleted successfully </string>

    <!-- Strings for Storageroom -->
    <string name="add_storageroom">Add Storage Room</string>
    <string name="storageroom_name_hint">Please enter a name for a Storageroom (max. 40 characters)</string>
    <string name="storageroom_description_hint">Storage Room Description</string>
    <string name="storageroom_name_empty">Please enter a name for the storageroom</string>
    <string name="no_storagerooms">Please create a Storageroom by clicking on the plus button</string>
    <string name="invalid_storageroom">Invalid Storagroom</string>
    <string name="headline_storageroom_overview">Storageroom Overview</string>
    <string name="headline_storageroom_item">Storageroom</string>
    <string name="storageroom_icon_description">Storageroom Icon</string>

    <!-- Strings for Products -->
    <string name="product_image">Product image</string>
    <string name="no_product">Please add a Product by clicking on the plus button</string>
    <string name="headline_product_overview">Product Overview</string>
    <string name="product_name_hint">Please enter a productname (max. 40 characters)</string>
    <string name="product_group_hint">Product Group</string>
    <string name="product_barcode_hint">Barcode</string>
    <string name="product_key_null">No Product found</string>
    <string name="product_not_found">Product not found</string>
    <string name="product_group_placeholder">Select a product category</string>
    <string name="product_group_food">food</string>
    <string name="product_group_housekeeping">housekeeping</string>
    <string name="product_group_cosmetics">cosmetics</string>
    <string name="product_group_baby_child">baby, child</string>
    <string name="product_group_others">others</string>
    <string name="product_name_required">Product name required</string>
    <string name="product_note_hint">Note</string>
    <string name="product_image_url_hint">Image url</string>
    <string name="product_brand_hint">Product brand</string>
    <string name="product_quantity_hint">Product Quantity</string>
    <string name="product_store_hint">Product store</string>
    <string name="product_rating_hint">Rating</string>
    <string name="product_favourite">Favourite</string>
    <string name="barcode_button_description">Button to open Barcode Scanner</string>
    <string name="headline_product_label">Add new product</string>
    <string name="barcode_button_search">Button for searching Barcode</string>
    <string name="product_image_description">Product as image</string>
    <string name="product_updated">Product updated!</string>
    <string name="failed_to_update_product">Failed to update product!</string>

    <!-- Strings for Shoppinglist -->
    <string name="headline_shoppinglist_overview">ShoppingList Overview</string>
    <string name="add_shoppinglist">Add ShoppingList</string>
    <string name="no_shoppinglist">Please create a ShoppingList by clicking on the plus button</string>
    <string name="shoppinglist_icon_description">ShoppingList Icon</string>
    <string name="shoppinglist_name_hint">Please enter a name for a ShoppingList (max. 40 characters)</string>
    <string name="shoppinglist_description_hint">ShoppingList Description</string>
    <string name="headline_shoppinglist_item">ShoppingList</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="check_icon_description">Check Button</string>

    <!-- Barcode implementation -->
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="product_search_button">Search object</string>
    <string name="mode_barcode_live_title">Barcode Scanning</string>
    <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

    <!-- Strings for product search settings. -->
    <string name="pref_category_product_search">Product search</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>

    <!-- Strings for object detection settings. -->
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="shoppinglist_name_empty">Enter a shoppinglist name:</string>

</resources>