<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <!-- Background views with gradients -->
    <View
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bottom_background"
        android:background="@drawable/gradient_background" />

    <View
        android:id="@+id/bottom_background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="#E8E8E8" />

    <!-- Main content area with rounded corners -->
    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="22dp"
        android:background="@drawable/all_rounded_corners">

        <!-- ScrollView to handle vertical scrolling -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Vertical LinearLayout for stacking UI elements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Header TextView -->
                <TextView
                    android:id="@+id/headerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/headline_product_label"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <!-- EditText for Product Name -->
                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/product_name_hint"
                    android:maxLength="40" />

                <!-- RelativeLayout for Product Group Spinner -->
                <RelativeLayout
                    android:id="@+id/spinnerBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/spinner_background"
                    android:orientation="horizontal">

                    <!-- Spinner for selecting product group -->
                    <Spinner
                        android:id="@+id/productGroupSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />

                    <!-- ImageView for dropdown arrow -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/arrow_drop_down" />

                </RelativeLayout>

                <!-- LinearLayout for Barcode EditText and Buttons -->
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="end">

                    <!-- EditText for Product Barcode -->
                    <EditText
                        android:id="@+id/product_barcode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary"
                        android:hint="@string/product_barcode_hint"
                        android:maxLength="40" />

                    <!-- ImageButton for searching barcode -->
                    <ImageButton
                        android:id="@+id/btnSearchBarcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barcode_icon"
                        android:padding="16dp"
                        android:contentDescription="@string/barcode_button_search"
                        android:backgroundTint="@color/primary" />

                    <!-- ImageButton for reading barcode -->
                    <ImageButton
                        android:id="@+id/btnReadBarcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barcode_icon"
                        android:padding="16dp"
                        android:contentDescription="@string/barcode_button_description"
                        android:backgroundTint="@color/primary" />
                </LinearLayout>

                <!-- EditText for Product Note -->
                <EditText
                    android:id="@+id/product_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_note_hint"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary"/>

                <!-- ImageView for Product Image -->
                <ImageView
                    android:id="@+id/product_image_url"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_image_search_vd_black_24"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/product_image_description" />

                <!-- EditText for Product Brand -->
                <EditText
                    android:id="@+id/product_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_brand_hint"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary" />

                <!-- EditText for Product Quantity -->
                <EditText
                    android:id="@+id/product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity_hint"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary" />

                <!-- EditText for Product Store -->
                <EditText
                    android:id="@+id/product_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_store_hint"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary" />

                <!-- EditText for Product Rating -->
                <EditText
                    android:id="@+id/product_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_rating_hint"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary" />

                <!-- CheckBox for marking Product as Favorite -->
                <CheckBox
                    android:id="@+id/product_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:button="@drawable/favourite_selector"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:text="@string/product_favourite"
                    android:textSize="18sp" />

                <!-- LinearLayout for Save and Cancel Buttons -->
                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_below="@+id/product_favourite"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="125dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <!-- Button for saving product -->
                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_button"
                        android:backgroundTint="@color/primary"
                        android:contentDescription="@string/save"
                        android:drawableEnd="@drawable/save_icon"
                        android:padding="10dp"
                        android:text="@string/save"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <!-- Button for cancelling action -->
                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:backgroundTint="@color/primary"
                        android:contentDescription="@string/cancel"
                        android:drawableEnd="@drawable/cancel_icon"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
