<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductOverviewActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/headline_product_overview"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_above="@id/createProductButton"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <TextView
        android:id="@+id/productEmptyView"
        android:layout_width="368dp"
        android:layout_height="575dp"
        android:layout_above="@id/createProductButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/no_product"
        android:textSize="20sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_storageroom"
        android:src="@drawable/add_plus_icon"
        android:theme="@style/Theme.Storageroom"
        app:backgroundTint="@color/primary"
        app:elevation="6dp"
        app:rippleColor="@color/primary"
        app:tint="@android:color/white" />
</RelativeLayout>